--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "momentmini",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A lighter version of moment",
   "main": "dist/index.js",
   "scripts": {
     "build": "cross-env NODE_ENV=production BABEL_ENV=production rollup -c",
-    "test": "cross-env NODE_ENV=development BABEL_ENV=test nyc --reporter=lcov --require babel-register --require babel-polyfill --reporter=text mocha test/**/*.test.js"
+    "test": "cross-env NODE_ENV=development BABEL_ENV=test nyc --reporter=lcov --require @babel/register --require @babel/polyfill --reporter=text mocha test/**/*.test.js"
   },
   "repository": {
     "type": "git",
@@ -21,34 +21,33 @@
     "fecha": "^3.0.2"
   },
   "devDependencies": {
-    "cross-env": "^5.2.0",
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.3",
-    "babel-plugin-istanbul": "^4.1.6",
-    "babel-plugin-module-resolver": "^3.1.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
-    "babel-register": "^6.26.0",
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/polyfill": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-stage-2": "^7.0.0",
+    "@babel/register": "^7.4.0",
+    "@babel/runtime": "7.0.0-beta.55",
+    "babel-plugin-istanbul": "^5.1.1",
     "chai": "^4.2.0",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-airbnb-base": "^12.1.0",
+    "cross-env": "^5.2.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-defaults": "^9.0.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.8.2",
-    "mocha": "^6.0.2",
-    "rollup": "^0.63.4",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "mocha": "^6.1.3",
+    "nyc": "^14.0.0-rc.1",
+    "rollup": "^1.10.0",
     "rollup-plugin-async": "^1.2.0",
-    "rollup-plugin-babel": "^3.0.7",
-    "rollup-plugin-buble": "^0.19.2",
-    "rollup-plugin-commonjs": "^9.1.0",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-buble": "^0.19.6",
+    "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-istanbul": "^2.0.1",
-    "rollup-plugin-json": "^3.0.0",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-uglify": "^3.0.0"
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^4.2.3",
+    "rollup-plugin-uglify": "^6.0.2"
   }
 }
