--- a/package.json
+++ b/package.json
@@ -18,36 +18,36 @@
   },
   "homepage": "https://github.com/descuentocity/momentmini#readme",
   "dependencies": {
-    "fecha": "^3.0.2"
+    "fecha": "^3.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-transform-runtime": "^7.4.3",
-    "@babel/polyfill": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "@babel/preset-stage-2": "^7.0.0",
-    "@babel/register": "^7.4.0",
-    "@babel/runtime": "7.0.0-beta.55",
-    "babel-plugin-istanbul": "^5.1.1",
+    "@babel/register": "^7.4.4",
+    "@babel/runtime": "7.4.4",
+    "babel-plugin-istanbul": "^5.1.4",
     "chai": "^4.2.0",
     "cross-env": "^5.2.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-defaults": "^9.0.0",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
-    "mocha": "^6.1.3",
-    "nyc": "^14.0.0-rc.1",
-    "rollup": "^1.10.0",
+    "eslint-plugin-react": "^7.13.0",
+    "mocha": "^6.1.4",
+    "nyc": "^14.1.1",
+    "rollup": "^1.11.3",
     "rollup-plugin-async": "^1.2.0",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-buble": "^0.19.6",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-istanbul": "^2.0.1",
     "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^4.2.3",
+    "rollup-plugin-node-resolve": "^4.2.4",
     "rollup-plugin-uglify": "^6.0.2"
   }
 }
